<resources>
    <string name="app_name">TareaDrawerComponent</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="txt_Nro1">Ingrese el Primer Numero</string>
    <string name="txt_Nro2">Ingrese el Segundo Numero</string>
    <string name="tv_Respuesta">Respuesta</string>
    <string name="btn_Sumar">+</string>
    <string name="btn_Restar">-</string>
    <string name="btn_Multiplicar">*</string>
    <string name="btn_Dividir">/</string>
    <string name="btn_Raiz">√</string>
    <string name="btn_Seno">Sen</string>
    <string name="btn_Coseno">Cos</string>
    <string name="btn_Tangente">Tan</string>
    <string name="btn_Factorial">!</string>
    <string name="btn_Potencia">x^n</string>
    <string name="btn_Random">rnd</string>
    <string name="btn_Limpiar">Limpiar</string>
    <string name="Descripcion">Descripccion</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>