<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img01"
    tools:context=".CalculadoraFragment">

    <EditText
        android:id="@+id/txtNro1"
        android:layout_width="292dp"
        android:layout_height="51dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="150dp"
        android:background="#8DFFFFFF"
        android:ems="10"
        android:hint="@string/txt_Nro1"
        android:inputType="numberDecimal"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#00BCD4"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#009688"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtNro2"
        android:layout_width="292dp"
        android:layout_height="51dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="150dp"
        android:background="#8FFFFFFF"
        android:ems="10"
        android:hint="@string/txt_Nro2"
        android:inputType="numberDecimal"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#00BCD4"
        android:textColorHint="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNro1" />

    <Button
        android:id="@+id/suma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="50dp"
        android:text="@string/btn_Sumar"
        android:textSize="24sp"
        app:backgroundTint="#CDDC39"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRespuesta" />

    <Button
        android:id="@+id/resta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="50dp"
        android:text="@string/btn_Restar"
        android:textSize="24sp"
        app:backgroundTint="#8BC34A"
        app:layout_constraintStart_toEndOf="@+id/suma"
        app:layout_constraintTop_toBottomOf="@+id/tvRespuesta" />

    <Button
        android:id="@+id/dividir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:text="@string/btn_Dividir"
        android:textSize="24sp"
        app:backgroundTint="#FF9800"
        app:layout_constraintStart_toEndOf="@+id/multiplicar"
        app:layout_constraintTop_toBottomOf="@+id/tvRespuesta" />

    <Button
        android:id="@+id/multiplicar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:text="@string/btn_Multiplicar"
        android:textSize="24sp"
        app:backgroundTint="#FFC107"
        app:layout_constraintStart_toEndOf="@+id/resta"
        app:layout_constraintTop_toBottomOf="@+id/tvRespuesta" />

    <Button
        android:id="@+id/raiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:text="@string/btn_Raiz"
        android:textSize="24sp"
        app:backgroundTint="#FF9800"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/suma" />

    <Button
        android:id="@+id/seno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/btn_Seno"
        android:textSize="24sp"
        app:backgroundTint="#FFC107"
        app:layout_constraintStart_toEndOf="@+id/raiz"
        app:layout_constraintTop_toBottomOf="@+id/resta" />

    <Button
        android:id="@+id/coceno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:text="@string/btn_Coseno"
        android:textSize="24sp"
        app:backgroundTint="#8BC34A"
        app:layout_constraintStart_toEndOf="@+id/seno"
        app:layout_constraintTop_toBottomOf="@+id/multiplicar" />

    <Button
        android:id="@+id/tangente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/btn_Tangente"
        android:textSize="24sp"
        app:backgroundTint="#CDDC39"
        app:layout_constraintStart_toEndOf="@+id/coceno"
        app:layout_constraintTop_toBottomOf="@+id/dividir" />

    <Button
        android:id="@+id/factorial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="28dp"
        android:text="@string/btn_Factorial"
        android:textSize="24sp"
        app:backgroundTint="#FF5722"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seno" />

    <Button
        android:id="@+id/potencia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/btn_Potencia"
        android:textSize="24sp"
        app:backgroundTint="#E91E63"
        app:layout_constraintStart_toEndOf="@+id/factorial"
        app:layout_constraintTop_toBottomOf="@+id/coceno" />

    <Button
        android:id="@+id/limpiar"
        android:layout_width="190dp"
        android:layout_height="43dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="40dp"
        android:text="@string/btn_Limpiar"
        android:textSize="20sp"
        app:backgroundTint="#3F51B5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/factorial" />

    <TextView
        android:id="@+id/tvRespuesta"
        android:layout_width="152dp"
        android:layout_height="46dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="150dp"
        android:background="#3F51B5"
        android:text="@string/tv_Respuesta"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNro2" />

    <Button
        android:id="@+id/rnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/btn_Random"
        android:textSize="24sp"
        app:backgroundTint="#F44336"
        app:layout_constraintStart_toEndOf="@+id/potencia"
        app:layout_constraintTop_toBottomOf="@+id/tangente" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/rino"
        android:layout_width="236dp"
        android:layout_height="215dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:lottie_autoPlay="true"
        app:lottie_rawRes="@raw/calculadora"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>